added FireflyComputerverificationStrategy which provides early failure to OLAP jobs with graph algorithm steps that have Persist/ResultGraph requirements. This leaads to better messaging.